agentgateway/oss-ent/manifests/oss/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mock-llm-oss
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: oss-agentgateway-proxy
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: mock-llm-oss
